CHANEGS in VERSION 1.9.3

* graphic parameters are correctly recycled in row annotations
* if there is only one row after splitting, there will be no dendrogram
* add `range` option in `densityHeatmap()`

==============================

CHANEGS in VERSION 1.9.2

* imporved example of `anno_link()`

==============================

CHANEGS in VERSION 1.9.1

* width of the heatmap body are calculated correctly if it is set as a fixed unit
* there is no dendrogram is nrows in a row-slice is 1
* add `anno_link()` annotation function
* bottom annotations are attached to the bottom edge of the heatmap 
  if there are additional blank space
* colors for NA can be set by "_NA_" in annotations
* `row_dend_reorder` and `column_dend_reorder` are set to `TRUE` by default again -_-!!
* optimize the way to specify na_col in heatmap annotations
* correct wrong viewport names in decorate_* functions

===============================

CHANGES in VERSION 1.7.3

* `oncoPrint()`: add `barplot_ignore` option to remove alterations
  that are not put on the barplot.
* `oncoPrint()`: delete extra alter_fun if they are not in the matrix

================================

CHANGES in VERSION 1.7.2

* for `anno_points()`, `anno_barplot()`, `anno_boxplot()`, the name is assigned
  to the viewport with data ranges
* oncoPrint(): top_annotation is assigned with correct height

===============================

CHANGES in VERSION 1.7.1

* `x` and `y` are `unit` object now in `cell_fun`
* add an example to visualize GO game
* transparency is kept when making discreate color mappings
* `oncoPrint()`: barplots on top now are controlled by `top_annotation` argument

================================

CHANGES in VERSION 1.5.1

* `oncoPrint`: there are default graphics if type of alterations is 
  less than two.
* `anno_*`: get rid of lazy loading

=================================

CHANGES in VERSION 1.4.4

* NULL can be added to the heatmap list