@@ -48,11 +48,11 @@ densityHeatmap = function(data,
 	...) {
 
 	if(is.matrix(data)) {
-		density_list = apply(data, 2, density)
-		quantile_list = apply(data, 2, quantile)
+		density_list = apply(data, 2, density, na.rm = TRUE)
+		quantile_list = apply(data, 2, quantile, na.rm = TRUE)
 	} else if(is.data.frame(data) || is.list(data)) {
-		density_list = lapply(data, density)
-		quantile_list = sapply(data, quantile)
+		density_list = lapply(data, density, na.rm = TRUE)
+		quantile_list = sapply(data, quantile, na.rm = TRUE)
 	} else {
 		stop("only matrix and list are allowed.")
 	}
